--- a/TicTacToeLibrary/TicTacToeLibrary.csproj
+++ b/TicTacToeLibrary/TicTacToeLibrary.csproj
@@ -39,13 +39,12 @@
     <Compile Include="Model\State.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\DelegateCommand.cs" />
+    <Compile Include="ViewModel\Testing.cs" />
     <Compile Include="ViewModel\TicTacToeElement.cs" />
     <Compile Include="ViewModel\TicTacToeViewModel.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="View\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
