--- a/TicTacToeLibrary/TicTacToeLibrary.csproj
+++ b/TicTacToeLibrary/TicTacToeLibrary.csproj
@@ -37,6 +37,7 @@
     <Compile Include="Model\Evaluate.cs" />
     <Compile Include="Model\Logic.cs" />
     <Compile Include="Model\State.cs" />
+    <Compile Include="Model\UnitTesting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\DelegateCommand.cs" />
     <Compile Include="ViewModel\Testing.cs" />
